Try fixing layout problem with overlapping playground on playerlist

--- a/frontend/src/app/components/playerlist/playerlist.component.scss
+++ b/frontend/src/app/components/playerlist/playerlist.component.scss
@@ -14,13 +14,13 @@
 }
 
 .player-row {
-    display: flex;
+    //display: flex;
     justify-content: space-between;
-    padding: 3px;
-    align-items: center;
-    margin-bottom: 10px;
+    //padding: 3px;
+    //align-items: center;
+    //margin-bottom: 10px;
 }
-
+/*
 .otherPlayer {
     background-color: white;
 }
@@ -34,3 +34,6 @@
     height: auto;
     width: auto;
 }
+
+
+ */
