--- a/frontend/src/app/components/playground/playground.component.scss
+++ b/frontend/src/app/components/playground/playground.component.scss
@@ -1,3 +1,4 @@
+/*
 .middleButton {
   margin-top: 80px;
   background-color: #3B7BBE;
@@ -7,4 +8,6 @@
   color: white;
 }
 .button {
+  text-align: center;
 }
+*/
